--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
+        "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "sass": "^1.47.0",
         "typescript": "^4.4.2",
