--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.13",
-        "@types/react": "^17.0.20",
-        "@types/react-dom": "^17.0.9",
-        "@types/react-redux": "^7.1.21",
         "axios": "^0.24.0",
+        "date-fns": "^2.28.0",
         "modern-normalize": "^1.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -22,11 +18,9 @@
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
-        "redux-devtools-extension": "^2.13.9",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "sass": "^1.47.0",
-        "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
@@ -56,6 +50,11 @@
         ]
     },
     "devDependencies": {
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^17.0.20",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-redux": "^7.1.21",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
         "eslint": "^8.6.0",
@@ -68,6 +67,8 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "prettier": "^2.5.1"
+        "prettier": "^2.5.1",
+        "redux-devtools-extension": "^2.13.9",
+        "typescript": "^4.4.2"
     }
 }
