--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "@testing-library/user-event": "^13.2.1",
         "axios": "^0.24.0",
         "date-fns": "^2.28.0",
+        "i18next": "^21.6.6",
         "modern-normalize": "^1.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.24.2",
+        "react-i18next": "^11.15.3",
         "react-loader-spinner": "^5.0.6",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
