--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^0.24.0",
         "date-fns": "^2.28.0",
         "i18next": "^21.6.6",
+        "i18next-browser-languagedetector": "^6.1.2",
         "modern-normalize": "^1.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
