--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@redux-saga/core": "^1.1.3",
+        "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -70,7 +71,6 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "prettier": "^2.5.1",
-        "redux-devtools-extension": "^2.13.9",
         "typescript": "^4.4.2"
     }
 }
